--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,24 +4,30 @@
 @import "vendor/normalize";
 
 
+body {
+  background-color: lightgrey;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
 .header__content-wrapper {
   display: flex;
   flex-direction: row;
 }
 
 .nav__list {
-  display: flex;
   gap: 20px;
   margin: 0;
+
+  // display: none;
 }
 
-.tours__title-wrapper {
+.title-wrapper {
   display: flex;
   justify-content: space-between;
-}
-
-.ggg {
-  width: 100%;
 }
 
 .card__bottom {
@@ -42,7 +48,7 @@ dd {
   object-fit: cover;
 
   @media (width >= 768px) {
-    width: 330px;
+    min-width: 330px;
   }
 
   @media (width >= 1440px) {
@@ -62,4 +68,96 @@ dd {
     height: 800px;
     width: 1440px;
   }
+}
+
+.about__image {
+  // margin-bottom: 60px;
+  width: 100%;
+  object-fit: cover;
+  height: 400px;
+  object-position: -60px;
+  display: block;
+
+  @media (width >= 768px) {
+    width: 542px;
+    height: 350px;
+    object-position: 0;
+  }
+
+  @media (width >= 1440px) {
+    width: 660px;
+    height: 498px;
+  }
+}
+
+
+.reviews__author-name {
+  display: block;
+}
+
+// .swiper-buttons__wrapper {
+//   // display: none;
+// }
+
+.gallery__image {
+  object-fit: cover;
+  display: block;
+
+  height: auto;
+}
+
+.gallery li:nth-child(even) {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.gallery ul {
+  display: flex;
+  gap: 5px;
+  overflow: hidden;
+}
+
+.form {
+  display: flex;
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+
+.contacts {
+  margin-bottom: 20px;
+}
+
+.contacts__inner {
+  @media (width >= 1100px) {
+    display: flex;
+  }
+}
+
+.contacts__image {
+  object-fit: cover;
+  object-position: calc(50% + 15px);
+  width: 100%;
+
+  @media (width >= 768px) {
+    object-position: 0;
+  }
+
+  @media (width >= 1100px) {
+    width: auto;
+  }
+}
+
+.footer__nav-list {
+  column-count: 2;
+}
+
+.hero .swiper-pagination-bullet {
+  background: #ffffff;
+  opacity: 1;
+}
+
+.hero .swiper-pagination-bullet-active {
+  background: red;
+  opacity: 1;
 }
