--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -110,7 +110,7 @@
 
   @media (min-width: $max-tablet-width) {
     text-align: left;
-    max-width: 925px;
+    max-width: 940px;
   }
 }
 
@@ -181,10 +181,10 @@
     position: absolute;
     background-image:
       image-set(
-        url("../../img/images/hero/hero-kamch-bg1-tablet@1x.webp") type("image/webp") 1x,
-        url("../../img/images/hero/hero-kamch-bg1-tablet@2x.webp") type("image/webp") 2x,
-        url("../../img/images/hero/hero-kamch-bg1-tablet@1x.png") type("image/png") 1x,
-        url("../../img/images/hero/hero-kamch-bg1-tablet@2x.png") type("image/png") 2x);
+        url("../img/images/hero/hero-kamch-bg1-tablet@1x.webp") type("image/webp") 1x,
+        url("../img/images/hero/hero-kamch-bg1-tablet@2x.webp") type("image/webp") 2x,
+        url("../img/images/hero/hero-kamch-bg1-tablet@1x.png") type("image/png") 1x,
+        url("../img/images/hero/hero-kamch-bg1-tablet@2x.png") type("image/png") 2x);
 
     width: 266px;
     height: 351px;
@@ -206,10 +206,10 @@
   @media (min-width: $desktop-width) {
     background-image:
       image-set(
-        url("../../img/images/hero/hero-kamch-bg1-desktop@1x.webp") type("image/webp") 1x,
-        url("../../img/images/hero/hero-kamch-bg1-desktop@2x.webp") type("image/webp") 2x,
-        url("../../img/images/hero/hero-kamch-bg1-desktop@1x.png") type("image/png") 1x,
-        url("../../img/images/hero/hero-kamch-bg1-desktop@2x.png") type("image/png") 2x);
+        url("../img/images/hero/hero-kamch-bg1-desktop@1x.webp") type("image/webp") 1x,
+        url("../img/images/hero/hero-kamch-bg1-desktop@2x.webp") type("image/webp") 2x,
+        url("../img/images/hero/hero-kamch-bg1-desktop@1x.png") type("image/png") 1x,
+        url("../img/images/hero/hero-kamch-bg1-desktop@2x.png") type("image/png") 2x);
 
     width: 308px;
     height: 407px;
@@ -224,10 +224,10 @@
     position: absolute;
     background-image:
       image-set(
-        url("../../img/images/hero/hero-kamch-bg2-tablet@1x.webp") type("image/webp") 1x,
-        url("../../img/images/hero/hero-kamch-bg2-tablet@2x.webp") type("image/webp") 2x,
-        url("../../img/images/hero/hero-kamch-bg2-tablet@1x.png") type("image/png") 1x,
-        url("../../img/images/hero/hero-kamch-bg2-tablet@2x.png") type("image/png") 2x);
+        url("../img/images/hero/hero-kamch-bg2-tablet@1x.webp") type("image/webp") 1x,
+        url("../img/images/hero/hero-kamch-bg2-tablet@2x.webp") type("image/webp") 2x,
+        url("../img/images/hero/hero-kamch-bg2-tablet@1x.png") type("image/png") 1x,
+        url("../img/images/hero/hero-kamch-bg2-tablet@2x.png") type("image/png") 2x);
 
     width: 236px;
     height: 312px;
@@ -249,10 +249,10 @@
   @media (min-width: $desktop-width) {
     background-image:
       image-set(
-        url("../../img/images/hero/hero-kamch-bg2-desktop@1x.webp") type("image/webp") 1x,
-        url("../../img/images/hero/hero-kamch-bg2-desktop@2x.webp") type("image/webp") 2x,
-        url("../../img/images/hero/hero-kamch-bg2-desktop@1x.png") type("image/png") 1x,
-        url("../../img/images/hero/hero-kamch-bg2-desktop@2x.png") type("image/png") 2x);
+        url("../img/images/hero/hero-kamch-bg2-desktop@1x.webp") type("image/webp") 1x,
+        url("../img/images/hero/hero-kamch-bg2-desktop@2x.webp") type("image/webp") 2x,
+        url("../img/images/hero/hero-kamch-bg2-desktop@1x.png") type("image/png") 1x,
+        url("../img/images/hero/hero-kamch-bg2-desktop@2x.png") type("image/png") 2x);
 
     width: 277px;
     height: 366px;
