--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -81,6 +81,15 @@
   }
 }
 
+.hero__item::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(112.1deg, rgba(15, 20, 41, 0.33) 17.23%, rgba(15, 20, 41, 0) 94.93%);
+  z-index: 2;
+}
 
 .hero__text-wrapper {
   position: relative;
@@ -337,12 +346,3 @@
   }
 }
 
-.hero__image::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(112.1deg, rgba(15, 20, 41, 0.33) 17.23%, rgba(15, 20, 41, 0) 94.93%);
-  z-index: 2;
-}
