--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 11px;
-  margin-left: auto;
-  width: 70%;
+  width: 100%;
 
   @media (min-width: $min-tablet-width) {
     flex-direction: row;
@@ -18,7 +17,7 @@
   }
 }
 
-.nav--closed .nav__list {
+.nav__list {
   display: none;
 
   @media (min-width: $max-tablet-width) {
@@ -40,7 +39,12 @@
   background-color: transparent;
   padding: 0;
   background-repeat: no-repeat;
+  background-image: url("../__spritemap#sprite-menu-view");
+  background-size: 26px;
 
+  @media (min-width: $min-tablet-width) {
+    top: 25px;
+  }
 
   @media (min-width: $tablet-width) {
     top: 32px;
@@ -52,16 +56,50 @@
   }
 }
 
-.nav--closed .nav__toggle {
-  
-  background-image: url("../__spritemap#sprite-menu-view");
-  background-size: 26px;
-}
-
 .nav--opened .nav__toggle {
   background-image: url("../__spritemap#sprite-cross-view");
-  
+  top: 15px;
+
+  @media (min-width: $min-tablet-width) {
+    top: 25px;
+  }
+
+  @media (min-width: $tablet-width) {
+    top: 29px;
+  }
 }
+
+.nav--opened .nav__list {
+  @include list-reset;
+
+  display: flex;
+  flex-direction: column;
+  order: 3;
+  justify-content: start;
+  padding-bottom: 25px;
+  padding-top: 7px;
+
+  @media (min-width: $min-tablet-width) {
+    position: absolute;
+    background-color: $theme-color;
+    left: 0;
+    top: 74px;
+    width: 100%;
+    padding-inline: 15px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 25px 45px 57px;
+  }
+
+  @media (min-width: $max-tablet-width) {
+    flex-direction: row;
+    order: 0;
+    padding: 0;
+    position: static;
+  }
+}
+
 
 .nav__phone {
   font-size: 14px;
@@ -71,6 +109,7 @@
   text-decoration: none;
   display: block;
   text-align: right;
+  order: 2;
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -81,12 +120,29 @@
   }
 }
 
-
 .nav__link {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1;
   color: $base-light;
+  font-weight: 700;
   text-decoration: none;
-  padding: 15px;
   display: block;
+  padding-inline-start: 0;
+  padding-block: 11px;
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+
+
+  @media (min-width: $min-tablet-width) {
+    font-size: 16px;
+    padding-block: 13px;
+  }
+
+  @media (min-width: $max-tablet-width) {
+    font-size: 16px;
+    padding: 15px;
+    font-weight: 400;
+    text-transform: none;
+    letter-spacing: normal;
+  }
 }
