--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -6,6 +6,7 @@ $base-text-color: #2d383f;
 $theme-color: #0266c1;
 $base-light: #ffffff;
 $light-op-5: rgba(255, 255, 255, 0.5);
+$disabled: #999999;
 
 
 // расширения
