--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,3 +1,17 @@
 .main {
   flex-grow: 1;
+
+  // max-width: 1440px;
+  // margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    background-image:
+      image-set(
+        url("../img/images/body/body-bg-tablet@1x.webp") type("image/webp") 1x,
+        url("../img/images/body/body-bg-tablet@2x.webp") type("image/webp") 2x,
+        url("../img/images/body/body-bg-tablet@1x.png") type("image/png") 1x,
+        url("../img/images/body/body-bg-tablet@2x.png") type("image/png") 2x);
+    background-repeat: no-repeat;
+    background-position: right 0 top 1029px;
+  }
 }
