--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -7,12 +7,16 @@ $theme-color: #0266c1;
 $base-light: #ffffff;
 $light-op-5: rgba(255, 255, 255, 0.5);
 $disabled: #999999;
+$border-color: rgba(2, 102, 193, 0.1);
+$border-icon: rgba(45, 56, 63, 0.3);
 
 
 // расширения
 $desktop-width: 1440px;
 $max-tablet-width: 1150px;
 $med-tab-width: 940px;
+$med-tab-width-2: 980px;
+$med-tab-width-3: 1050px;
 $tablet-width: 768px;
 $max-mobile-width: 767px;
 $min-tablet-width: 550px;
