--- a/source/sass/blocks/content-wrapper.scss
+++ b/source/sass/blocks/content-wrapper.scss
@@ -5,7 +5,7 @@
     padding: 40px 45px;
   }
 
-  @media (min-width: $max-tablet-width) {
+  @media (min-width: $desktop-width) {
     padding: 100px 120px;
     max-width: 1440px;
     margin: 0 auto;
