--- a/source/sass/blocks/title-wrapper.scss
+++ b/source/sass/blocks/title-wrapper.scss
@@ -1,6 +1,7 @@
 .title-wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding-top: 19px;
   padding-bottom: 17px;
 
