--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -9,7 +9,8 @@ $light-op-5: rgba(255, 255, 255, 0.5);
 $disabled: #999999;
 $border-color: rgba(2, 102, 193, 0.1);
 $border-icon: rgba(45, 56, 63, 0.3);
-
+$backup-color: #526e8e;
+$backup-color-card: #10140c;
 
 // расширения
 $desktop-width: 1440px;
