--- a/source/sass/blocks/trainig-process.scss
+++ b/source/sass/blocks/trainig-process.scss
@@ -7,6 +7,11 @@
     font-size: 18px;
     margin-bottom: 100px;
   }
+
+  @media (min-width: $desktop-width) {
+    font-size: 21px;
+    margin-bottom: 26px;
+  }
 }
 
 .training-process__list {
@@ -16,6 +21,27 @@
   flex-direction: column;
   gap: 25px;
   position: relative;
+
+  @media (min-width: $min-tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    row-gap: 104px;
+    column-gap: 134px;
+  }
+
+  @media (min-width: $med-tab-width-3) {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 0;
+  }
+
+
+  @media (min-width: $desktop-width) {
+    padding-left: 10px;
+    gap: 18px;
+  }
 
   &::before {
     content: "";
@@ -33,26 +59,11 @@
     @media (min-width: $med-tab-width-3) {
       content: "";
       height: 2px;
-      width: calc(100% - 130px);
+      width: calc(100% - 20px);
       top: auto;
       left: 20px;
-      bottom: 0;
+      bottom: -10px;
     }
-  }
-
-  @media (min-width: $min-tablet-width) {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(2, auto);
-    row-gap: 104px;
-    column-gap: 134px;
-  }
-
-  @media (min-width: $med-tab-width-3) {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 0;
   }
 }
 
@@ -63,9 +74,18 @@
   flex-direction: row;
   max-width: 260px;
 
+  @media (min-width: $min-tablet-width) {
+    padding-left: 35px;
+  }
+
   @media (min-width: $med-tab-width-3) {
     width: 240px;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 235px;
+  }
+
 
   &::before {
     content: "";
@@ -86,7 +106,7 @@
       content: "";
       top: auto;
       left: 10px;
-      bottom: -13px;
+      bottom: -23px;
     }
   }
 
@@ -97,14 +117,21 @@
     position: absolute;
     background-repeat: no-repeat;
   }
-
-  @media (min-width: $min-tablet-width) {
-    padding-left: 35px;
-  }
 }
 
 .trainig-process__item--boot {
   grid-column: 1/2;
+
+  &::after {
+    background-image: url("../__spritemap#sprite-process-boot-view");
+    height: 21px;
+    top: 4px;
+    left: 30px;
+
+    @media (min-width: $min-tablet-width) {
+      left: 0;
+    }
+  }
 }
 
 .trainig-process__item--map::after {
@@ -117,24 +144,21 @@
   }
 }
 
-.trainig-process__item--boot::after {
-  background-image: url("../__spritemap#sprite-process-boot-view");
-  height: 21px;
-  top: 4px;
-  left: 30px;
-
-  @media (min-width: $min-tablet-width) {
-    left: 0;
+.trainig-process__item--pine {
+  &::before {
+    @media (min-width: $desktop-width) {
+      left: -11px;
+    }
   }
-}
 
-.trainig-process__item--pine::after {
-  background-image: url("../__spritemap#sprite-process-pine-view");
-  top: 2px;
-  left: 29px;
+  &::after {
+    background-image: url("../__spritemap#sprite-process-pine-view");
+    top: 2px;
+    left: 29px;
 
-  @media (min-width: $min-tablet-width) {
-    left: 0;
+    @media (min-width: $min-tablet-width) {
+      left: 0;
+    }
   }
 }
 
@@ -142,20 +166,26 @@
   grid-column: 2/3;
   grid-row: 1/2;
   justify-self: start;
-}
 
-.trainig-process__item--mountain::after {
-  // background-image: url("../__spritemap#sprite-process-mountain-view"); не работает со спрайтом, поэтому добавил через файл
+  &::after {
+    // background-image: url("../__spritemap#sprite-process-mountain-view"); не работает со спрайтом, поэтому добавил через файл
 
-  background-image: url("../../img/sprite/process-mountain.svg");
-  top: 2px;
-  left: 29px;
+    background-image: url("../../img/sprite/process-mountain.svg");
+    top: 2px;
+    left: 29px;
 
-  @media (min-width: $min-tablet-width) {
-    left: 0;
+    @media (min-width: $min-tablet-width) {
+      left: 0;
+    }
   }
 }
 
 .trainig-process__desc {
   margin: 0;
+
+
+  @media (min-width: $desktop-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
