--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -11,6 +11,7 @@ $border-color: rgba(2, 102, 193, 0.1);
 $border-icon: rgba(45, 56, 63, 0.3);
 $backup-color: #526e8e;
 $backup-color-card: #10140c;
+$bg-grad: #342d25;
 
 // расширения
 $desktop-width: 1440px;
@@ -23,3 +24,4 @@ $max-mobile-width: 767px;
 $min-tablet-width: 550px;
 $middle-mobile-width: 450px;
 $min-mobile-width: 320px;
+
