--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,11 +24,8 @@
 @import "./blocks/trainers";
 @import "./blocks/trainig-process";
 @import "./blocks/about";
+@import "./blocks/reviews";
 
-
-.reviews__author-name {
-  display: block;
-}
 
 ul {
   list-style: none;
