--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -22,6 +22,7 @@ $med-tab-width-3: 1050px;
 $tablet-width: 768px;
 $max-mobile-width: 767px;
 $min-tablet-width: 550px;
+$min-tablet-width-2: 655px;
 $middle-mobile-width: 450px;
 $min-mobile-width: 320px;
 
