--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,8 +25,7 @@
 @import "./blocks/trainig-process";
 @import "./blocks/about";
 @import "./blocks/reviews";
-@import "./blocks/advantages";
-
+@import "./blocks/advantage";
 
 ul {
   list-style: none;
