--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -5,6 +5,7 @@ $pr-font: "Montserrat", sans-serif;
 $base-text-color: #2d383f;
 $theme-color: #0266c1;
 $base-light: #ffffff;
+$base-dark: #000000;
 $light-op-5: rgba(255, 255, 255, 0.5);
 $disabled: #999999;
 $border-color: rgba(2, 102, 193, 0.1);
