--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -1,11 +1,17 @@
 .advantages__wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative;
+
+
   @media (min-width: $max-tablet-width) {
     padding-inline: 0;
   }
 
-  max-width: 1440px;
-  margin: 0 auto;
-  position: relative;
+  @media (min-width: $desktop-width) {
+    margin-top: -100px;
+    padding-bottom: 0;
+  }
 }
 
 .advantages__title {
@@ -79,6 +85,7 @@
     background-size: 48px 48px;
     padding: 102px 19px 30px;
     background-position: 50% 28px;
+    background-color: $base-light;
   }
 
   @media (min-width: $max-tablet-width) {
