--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -97,13 +97,22 @@
 
   display: flex;
 
+
   @media (min-width: $max-tablet-width) {
     gap: 6px;
   }
 
-  @media (width >= 1281px) {
+  @media (width >= 1280px) {
     gap: 5px;
+  }
+
+  @media (width >= 1281px) {
     flex-wrap: wrap;
+    gap: 3px;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 5px;
   }
 }
 
@@ -114,7 +123,7 @@
   gap: 3px;
 
   @media (min-width: $tablet-width) {
-    max-height: 418px;
+    height: 418px;
     gap: 6px;
   }
 
@@ -138,7 +147,7 @@
   display: block;
 
   @media (min-width: $tablet-width) {
-    height: auto;
+    object-fit: cover;
   }
 }
 
