--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -7,8 +7,41 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 127px 0 0;
+    padding: 127px 0 177px;
     padding-left: 105px;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 449px;
+      height: 263px;
+      background-image:
+        image-set(
+          url("../img/images/reviews/bg/review-right-clouds@1x.webp") type("image/webp") 1x,
+          url("../img/images/reviews/bg/review-right-clouds@2x.webp") type("image/webp") 2x,
+          url("../img/images/reviews/bg/review-right-clouds@1x.png") type("image/png") 1x,
+          url("../img/images/reviews/bg/review-right-clouds@2x.png") type("image/png") 2x);
+      background-repeat: no-repeat;
+      bottom: -60px;
+      right: 0;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 888px;
+      height: 402px;
+      background-image:
+        image-set(
+          url("../img/images/reviews/bg/reviews-left-clouds@1x.webp") type("image/webp") 1x,
+          url("../img/images/reviews/bg/reviews-left-clouds@2x.webp") type("image/webp") 2x,
+          url("../img/images/reviews/bg/reviews-left-clouds@1x.png") type("image/png") 1x,
+          url("../img/images/reviews/bg/reviews-left-clouds@2x.png") type("image/png") 2x);
+      background-repeat: no-repeat;
+      bottom: -13px;
+      left: 0;
+    }
   }
 }
 
@@ -69,6 +102,7 @@
   box-shadow: 0 0 20px 0 rgba(28, 51, 116, 0.1);
   border: 1px solid $base-light;
   overflow-y: auto;
+  background-color: $base-light;
 
   @media (min-width: $min-tablet-width-2) {
     display: flex;
