--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -3,10 +3,29 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 60px;
+    background-image:
+      image-set(
+        url("../../img/images/body/body-clouds-top-tablet@1x.webp") type("image/webp") 1x,
+        url("../img/images/body/body-clouds-top-tablet@2x.webp") type("image/webp") 2x,
+        url("../img/images/body/body-clouds-top-tablet@1x.png") type("image/png") 1x,
+        url("../img/images/body/body-clouds-top-tablet@2x.png") type("image/png") 2x);
+    background-repeat: no-repeat;
+    background-position: right 0 bottom 156px;
+  }
+
+  @media (min-width: $med-tab-width-3) {
+    background-position: right 0 bottom 30px;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 63px;
+    background-image:
+      image-set(
+        url("../../img/images/body/body-clouds-top-desktop@1x.webp") type("image/webp") 1x,
+        url("../img/images/body/body-clouds-top-desktop@2x.webp") type("image/webp") 2x,
+        url("../img/images/body/body-clouds-top-desktop@1x.png") type("image/png") 1x,
+        url("../img/images/body/body-clouds-top-desktop@2x.png") type("image/png") 2x);
+    background-repeat: no-repeat;
   }
 }
 
