--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -13,6 +13,7 @@ $border-icon: rgba(45, 56, 63, 0.3);
 $backup-color: #526e8e;
 $backup-color-card: #10140c;
 $bg-grad: #342d25;
+$active-color: #1c3374;
 
 // расширения
 $desktop-width: 1440px;
