--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import "./blocks/section-title";
 @import "./blocks/content-wrapper";
 @import "./common/button";
+@import "./common/logo";
 @import "./common/global";
 @import "./blocks/page-body";
 @import "./blocks/header";
