--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
   flex-direction: column;
-  gap: 11px;
+  gap: 16px;
   width: 100%;
 
   @media (min-width: $min-tablet-width) {
@@ -18,107 +18,149 @@
 }
 
 .nav__list {
-  display: none;
+  @include list-reset;
+
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  order: 3;
+  justify-content: start;
+  left: 0;
+  background-color: $theme-color;
+  width: 100%;
+  top: 100px;
+  transform: translateY(-100vh);
+  opacity: 0;
+  transition: all 300ms ease-in;
+
+  @media (min-width: $min-tablet-width) {
+    top: 70px;
+  }
 
   @media (min-width: $max-tablet-width) {
-    @include list-reset;
-
+    transform: translateY(0);
     display: flex;
-    max-width: 750px;
-    margin-left: 30px;
+    flex-direction: row;
     flex-wrap: wrap;
+    max-width: 600px;
+
+    // justify-self: center;
+    margin-left: 30px;
+    position: static;
+    order: 0;
+    padding: 0;
+    opacity: 1;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 650px;
+    margin-left: 80px;
+    gap: 1px;
+    padding-top: 3px;
   }
 }
 
 .nav__toggle {
   position: absolute;
-  left: 15px;
-  top: 18px;
+  left: 8px;
+  top: 8px;
   width: 40px;
   height: 40px;
   background-color: transparent;
-  padding: 0;
-  background-repeat: no-repeat;
-  background-image: url("../__spritemap#sprite-menu-view");
-  background-size: 26px;
+  padding: 9px 6px;
+
 
   @media (min-width: $min-tablet-width) {
-    top: 25px;
+    top: 17px;
+    left: 15px;
   }
 
   @media (min-width: $tablet-width) {
-    top: 32px;
-    left: 45px;
+    top: 21px;
+    left: 38px;
   }
 
   @media (min-width: $max-tablet-width) {
     display: none;
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 2px;
+    top: 11px;
+    left: 8px;
+    background-color: $base-light;
+    transition: all 300ms ease;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 26px;
+    height: 2px;
+    bottom: 10px;
+    left: 8px;
+    background-color: $base-light;
+    transition: all 300ms ease;
+  }
+}
+
+.nav__toggle-inner::after {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 2px;
+  background-color: $base-light;
+  left: 8px;
+  top: 19px;
+  opacity: 1;
+  transition: all 300ms ease;
 }
 
 .nav--opened .nav__toggle {
-  background-image: url("../__spritemap#sprite-cross-view");
-  top: 15px;
+  &::after {
+    transform: rotate(45deg);
+    top: 19px;
+    left: 5px;
+    width: 30px;
+  }
+
+  &::before {
+    transform: rotate(-45deg);
+    left: 5px;
+    top: 19px;
+    width: 30px;
+  }
+
 
   @media (min-width: $min-tablet-width) {
-    top: 25px;
+    top: 18px;
   }
 
   @media (min-width: $tablet-width) {
-    top: 29px;
+    top: 21px;
   }
 }
 
+.nav--opened .nav__toggle-inner::after {
+  opacity: 0;
+  left: 16px;
+}
+
 .nav--opened .nav__list {
-  @include list-reset;
-
-  display: flex;
-  flex-direction: column;
-  order: 3;
-  justify-content: start;
-  padding-bottom: 25px;
-  padding-top: 7px;
-
-  @media (min-width: $min-tablet-width) {
-    position: absolute;
-    background-color: $theme-color;
-    left: 0;
-    top: 74px;
-    width: 100%;
-    padding-inline: 15px;
-  }
+  padding-inline: 15px;
+  padding-bottom: 27px;
+  transition: all 300ms ease;
+  transform: translateY(0);
+  opacity: 1;
 
   @media (min-width: $tablet-width) {
     padding: 25px 45px 57px;
   }
-
-  @media (min-width: $max-tablet-width) {
-    flex-direction: row;
-    order: 0;
-    padding: 0;
-    position: static;
-  }
 }
 
-
-.nav__phone {
-  font-size: 14px;
-  line-height: 1;
-  font-weight: 600;
-  color: $base-light;
-  text-decoration: none;
-  display: block;
-  text-align: right;
-  order: 2;
-
-  @media (min-width: $tablet-width) {
-    font-size: 16px;
-  }
-
-  @media (min-width: $desktop-width) {
-    font-size: 18px;
-  }
-}
 
 .nav__link {
   font-size: 14px;
@@ -126,11 +168,41 @@
   color: $base-light;
   font-weight: 700;
   text-decoration: none;
-  display: block;
+  display: inline-block;
   padding-inline-start: 0;
   padding-block: 11px;
   text-transform: uppercase;
   letter-spacing: 0.04em;
+  position: relative;
+  transition: all 300ms ease;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    bottom: 8px;
+    left: 0;
+    background-color: $base-light;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transition: all 300ms ease;
+
+    @media (min-width: $min-tablet-width) {
+      bottom: 10px;
+    }
+
+    @media (min-width: $max-tablet-width) {
+      width: calc(100% - 30px);
+      left: 15px;
+      bottom: 12px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: calc(100% - 30px);
+      left: 15px;
+    }
+  }
 
 
   @media (min-width: $min-tablet-width) {
@@ -139,10 +211,36 @@
   }
 
   @media (min-width: $max-tablet-width) {
-    font-size: 16px;
     padding: 15px;
     font-weight: 400;
     text-transform: none;
     letter-spacing: normal;
   }
+
+  &:hover::before {
+    transform: scaleX(1);
+  }
+
+
+  &:focus-visible {
+    outline: 1px solid $base-light;
+    outline-offset: -1px;
+
+    @media (min-width: $max-tablet-width) {
+      outline-offset: -12px;
+    }
+  }
+
+  &:active {
+    color: $active-color;
+  }
+
+  &:active::before {
+    background-color: $active-color;
+  }
+}
+
+.nav__link--disabled {
+  color: $disabled;
+  pointer-events: none;
 }
