--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -166,10 +166,53 @@
   display: inline-block;
   width: 100%;
 
+  &:hover {
+    border: 1px solid $theme-color;
+    padding: 17px;
+  }
+
+  &:focus-visible {
+    outline: none;
+    border: 1px solid $base-text-color;
+    padding: 17px;
+
+    &::placeholder {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  &:disabled {
+    border: 1px solid $disabled;
+    pointer-events: none;
+    background-color: $base-light;
+    color: $disabled;
+
+    &:hover {
+      padding: 18px;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     border: 1px solid $border-color;
     padding: 19px;
+
+    &:hover {
+      padding: 19px;
+      border-color: $theme-color;
+    }
+
+    &:focus-visible {
+      padding: 19px;
+    }
+
+    &:disabled {
+      border-color: $disabled;
+
+      &:hover {
+        padding: 19px;
+      }
+    }
   }
 
   &::placeholder {
@@ -177,12 +220,14 @@
     transition: all 300ms ease-in;
     transform: scale(0);
   }
+}
 
-  &:focus-visible {
-    &::placeholder {
-      opacity: 1;
-      transform: scale(1);
-    }
+.form__field--error {
+  border: 1px solid $error;
+  padding: 17px;
+
+  @media (min-width: $tablet-width) {
+    padding: 19px;
   }
 }
 
@@ -207,7 +252,7 @@
 
   @media (min-width: $tablet-width) {
     padding-inline: 30px;
-    padding-block: 22px 18px;
+    padding-block: 21px 17px;
     max-width: 430px;
   }
 
