--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -23,6 +23,7 @@
   display: block;
   position: relative;
   border: 1px solid $border-icon;
+  transition: all 250ms ease;
 
   &::after {
     content: "";
@@ -31,6 +32,35 @@
     margin: auto;
     mask-repeat: no-repeat;
     background-color: $base-text-color;
+  }
+
+  &:hover {
+    border-color: $base-text-color;
+  }
+
+  &:focus-visible {
+    border: none;
+    outline: none;
+  }
+
+  &:active {
+    background-color: $theme-color;
+    border-color: $theme-color;
+  }
+
+  &:active::after {
+    background-color: $base-light;
+  }
+}
+
+.social__link--trainers {
+  width: 24px;
+  height: 24px;
+
+  &::after {
+    mask-image: url("../__spritemap#sprite-vk-view");
+    width: 14px;
+    height: 8px;
   }
 }
 
