--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -14,6 +14,8 @@ $backup-color: #526e8e;
 $backup-color-card: #10140c;
 $bg-grad: #342d25;
 $active-color: #1c3374;
+$pag-hov-col: #d9d9d9;
+$error: #ff121f;
 
 // расширения
 $desktop-width: 1440px;
