--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -20,6 +20,8 @@
 
 .page-body--block {
   overflow: hidden;
+  user-select: none;
+  z-index: -30;
 
   @media (min-width: $max-tablet-width) {
     overflow: auto;
