--- a/source/sass/common/button.scss
+++ b/source/sass/common/button.scss
@@ -6,14 +6,87 @@
   color: $base-light;
   text-align: center;
   border: none;
-  padding: 22px 34px 19px;
+  padding: 21px 34px 19px;
   text-decoration: none;
   margin: 0;
   cursor: pointer;
   display: inline-block;
+  transition: all 200ms ease-in-out;
+  position: relative;
 }
 
 
 .button--primary {
   background-color: $theme-color;
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 0;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: $base-light;
+    opacity: 0;
+    transition: all 300ms ease;
+  }
+
+  &::before {
+    content: attr(data-title);
+    position: absolute;
+    color: $active-color;
+    font-weight: 500;
+    opacity: 0;
+    z-index: 2;
+    border: 1px solid $active-color;
+    padding-top: 21px;
+    inset: 0;
+    transition: all 200ms ease-in;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
+
+  &:hover::after {
+    height: 100%;
+    opacity: 1;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+
+  &:focus-visible::before {
+    opacity: 1;
+    border: none;
+  }
+
+  &:focus-visible::after {
+    height: 100%;
+    opacity: 1;
+  }
+
+  &:active::before {
+    content: none;
+  }
+
+  &:active::after {
+    content: none;
+  }
+
+  &:active {
+    background-color: $active-color;
+  }
+
+  &:disabled {
+    background-color: $disabled;
+    pointer-events: none;
+  }
+}
+
+// если ссылка оформлена кнопкой, добавить класс
+.button--disabled {
+  background-color: $disabled;
+  pointer-events: none;
 }
