--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,9 +9,9 @@
 @import "./blocks/section-title";
 @import "./blocks/content-wrapper";
 @import "./common/button";
-@import "./common/logo";
 @import "./common/global";
 @import "./blocks/page-body";
+@import "./blocks/logo";
 @import "./blocks/header";
 @import "./blocks/nav";
 @import "./blocks/main";
