--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -226,6 +226,10 @@
   border: 1px solid $error;
   padding: 17px;
 
+  &:hover {
+    border-color: $error;
+  }
+
   @media (min-width: $tablet-width) {
     padding: 19px;
   }
