--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -37,6 +37,7 @@
   align-self: end;
   margin-top: 1px;
   transition: all 300ms ease;
+  border-radius: 10px;
 
   @media (min-width: $tablet-width) {
     margin-top: 0;
@@ -47,10 +48,10 @@
     align-self: center;
   }
 
-
   &:focus-visible {
-    outline: 1px solid $base-light;
-    opacity: 0.5;
+    outline: 2px solid $base-light;
+    opacity: 0.8;
+    outline-offset: 5px;
   }
 }
 
