--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -29,7 +29,7 @@
   background-color: $theme-color;
   width: 100%;
   top: 100px;
-  transform: translateY(-100vh);
+  transform: translateX(-100vw);
   opacity: 0;
   transition: all 300ms ease-in;
   z-index: 1;
@@ -39,7 +39,7 @@
   }
 
   @media (min-width: $max-tablet-width) {
-    transform: translateY(0);
+    transform: translateX(0);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -67,6 +67,7 @@
   height: 40px;
   background-color: transparent;
   padding: 9px 6px;
+  border-radius: 10px;
 
 
   @media (min-width: $min-tablet-width) {
@@ -104,6 +105,23 @@
     background-color: $base-light;
     transition: all 300ms ease;
   }
+
+  &:hover {
+    background-color: #ffffff;
+    border-radius: 10px;
+  }
+
+  &:hover::after {
+    background-color: $theme-color;
+  }
+
+  &:hover::before {
+    background-color: $theme-color;
+  }
+
+  &:focus-visible {
+    outline: 2px solid $base-light;
+  }
 }
 
 .nav__toggle-inner::after {
@@ -115,7 +133,13 @@
   left: 8px;
   top: 19px;
   opacity: 1;
-  transition: all 300ms ease;
+  transition: all 200ms ease;
+  z-index: 20;
+}
+
+
+.nav__toggle:hover .nav__toggle-inner::after {
+  background-color: $theme-color;
 }
 
 .nav--opened .nav__toggle {
@@ -189,7 +213,6 @@
     bottom: 8px;
     left: 0;
     background-color: $base-light;
-    border-radius: 5px;
     transform: scaleX(0);
     transition: all 300ms ease;
 
